# wasm-bridge

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  component_model.md  recipes.json  release.sh  run_checks.sh
.github/: README.md
crates/wasm-bridge/: Cargo.toml  README.md
crates/wasm-bridge-bindgen/: Cargo.toml
crates/wasm-bridge-cli/: Cargo.toml  README.md
crates/wasm-bridge-cli/src/: jco_runner.rs  main.rs  reader.rs  zipper.rs
crates/wasm-bridge-cli/src/transformers/: js_transform.rs  mod.rs  transformer.rs  universal.rs  version.rs
crates/wasm-bridge-jco/: Cargo.toml  README.md
crates/wasm-bridge-jco/src/: lib.rs  ts_bindgen.rs
crates/wasm-bridge-js/: Cargo.toml  README.md
crates/wasm-bridge-js/src/: caller.rs  config.rs  context.rs  error.rs  func.rs  helpers.rs  instance.rs  lib.rs  linker.rs  memory.rs  module.rs  store.rs  string_interning.rs  typed_func.rs
crates/wasm-bridge-js/src/component/: component.rs  component_loader.rs  conversions.rs  exports.rs  func.rs  helpers.rs  instance.rs  linker.rs  make_closure.rs  mod.rs  resources.rs  typed_func.rs
crates/wasm-bridge-js/src/component_direct/: component.rs  component_loader.rs  exports.rs  func.rs  instance.rs  linker.rs  make_closure.rs  mod.rs  typed_func.rs
crates/wasm-bridge-js/src/component_optimize/: component.rs  instance.rs  linker.rs  make_closure.rs  typed_func.rs
crates/wasm-bridge-js/src/conversions/: from_js_results.rs  from_js_value.rs  from_js_value_tests.rs  into_closure.rs  into_import_results.rs  into_js_params.rs  into_js_value.rs  mod.rs  to_js_params.rs  to_js_value.rs
crates/wasm-bridge-js/src/direct/: lift.rs  lift_impls.rs  lower.rs  lower_impls.rs  memory.rs  memory_opt.rs  mod.rs  size_description.rs
crates/wasm-bridge-js/src/direct_bytes/: lift.rs  lift_impls.rs  lower.rs  lower_impls.rs  memory.rs  mod.rs  size_description.rs
crates/wasm-bridge-js/src/no_bindgen/: func.rs  instance.rs  linker.rs  memory.rs  mod.rs  module.rs  typed_func.rs  types.rs  val.rs
crates/wasm-bridge-js/src/wasi/preview2/: command.rs  ctx_builder.rs  environment.rs  filesystem.rs  mod.rs  preopens.rs  stdio.rs  streams.rs  table.rs  terminal.rs  wasi_ctx.rs  wasi_ctx_builder.rs
crates/wasm-bridge-macros/: Cargo.toml  LICENSE  README.md
crates/wasm-bridge-macros/src/: bindgen.rs  component.rs  conversions.rs  from_js_value.rs  lib.rs  original.rs  to_js_value.rs
crates/wasm-bridge-macros/src/direct_impl/: lift.rs  lower.rs  mod.rs  size_description.rs
crates/wasm-bridge-macros/src/js_impl/: from_js_value.rs  mod.rs  size_description.rs
crates/wasm-bridge-macros/src/original/: README.md  bindgen.rs  component.rs  mod.rs
crates/wasm-bridge-macros/src/transform/: lower.rs
crates/wasm-bridge-wasi/: Cargo.toml  README.md  wasi-shim.js
crates/wasm-bridge-wasi-js/: Cargo.toml  wasi-shim.js
crates/wasm-bridge-wasi-js/src/: lib.rs
crates/wasm-bridge-wasi-js/src/preview2/: command.rs  error.rs  mod.rs  random.rs  table.rs  wasi_ctx.rs  wasi_ctx_builder.rs  wasi_view.rs
crates/wasm-bridge-wasi-js/src/preview2/cli/: environment.rs  exit.rs  mod.rs  stderr.rs  stdin.rs  stdout.rs  terminal.rs  terminal_stderr.rs  terminal_stdin.rs  terminal_stdout.rs
crates/wasm-bridge-wasi-js/src/preview2/clocks/: mod.rs  monotonic_clock.rs  wall_clock.rs  wall_clock.wit
crates/wasm-bridge-wasi-js/src/preview2/filesystem/: mod.rs  preopens.rs  types.rs
crates/wasm-bridge-wasi-js/src/preview2/stream/: input_stream.rs  mod.rs  output_stream.rs
crates/wasm-bridge-wasi-js/src/preview2/wits/: environment.wit  exit.wit  input_streams.wit  monotonic_clock.wit  output_streams.wit  random.wit  stderr.wit  stdin.wit  stdout.wit  terminal_stderr.wit  terminal_stdin.wit  terminal_stdout.wit  wall_clock.wit
crates/wasm-bridge-wasi/src/: lib.rs
crates/wasm-bridge-wasi/src/js/: command.rs  error.rs  mod.rs  random.rs  resource_table.rs  wasi_ctx_builder.rs  wasi_view.rs
crates/wasm-bridge-wasi/src/js/cli/: environment.rs  exit.rs  terminal.rs
crates/wasm-bridge-wasi/src/js/clocks/: monotonic_clock.rs  wall_clock.rs
crates/wasm-bridge-wasi/src/js/filesystem/: preopens.rs  types.rs
crates/wasm-bridge-wasi/src/preview2/: command.rs  environment.rs  error.rs  filesystem.rs  mod.rs  preopens.rs  random.rs  stdio.rs  streams.rs  table.rs  terminal.rs  wasi_ctx.rs  wasi_ctx_builder.rs  wasi_view.rs
crates/wasm-bridge-wasi/src/sys/: mod.rs
crates/wasm-bridge/src/: lib.rs  sys.rs
crates/wasm-bridge/src/js/: caller.rs  config.rs  context.rs  engine.rs  error.rs  helpers.rs  instance.rs  linker.rs  module.rs  store.rs
crates/wasm-bridge/src/sys/: mod.rs  universal_component.rs
examples/wasi_components/: Cargo.toml  build_guest.sh  io_redirect.wit  run_examples.sh
examples/wasi_components/clocks/: protocol.wit
examples/wasi_components/clocks/guest/: Cargo.toml
examples/wasi_components/clocks/host/: Cargo.toml
examples/wasi_components/guest/io/: Cargo.toml
examples/wasi_components/guest/io_redirect/: Cargo.toml
examples/wasi_components/io_redirect/guest/: Cargo.toml
examples/wasi_components/io_redirect/host/: Cargo.toml
examples/wasi_components/io_redirect/src/: lib.rs
examples/wasi_components/tests/: io.rs  io_redirect.rs
examples/wit_components/: Cargo.toml  build_guest.sh  records.wit  run_examples.sh
examples/wit_components/guest/enums/: Cargo.toml
examples/wit_components/guest/records/: Cargo.toml
examples/wit_components/records/: Cargo.toml
examples/wit_components/records/guest/: Cargo.toml
examples/wit_components/records/host/: Cargo.toml
examples/wit_components/records/src/: lib.rs
examples/wit_components/src/: lib.rs
examples/wit_components/tests/: enums.rs  records.rs
src/: lib.rs  (+1 more)
tests/skeletons/wasi_components/host_js/: Cargo.toml
tests/skeletons/wasi_components/host_sys/: Cargo.toml
tests/skeletons/wit_components/bench_js/: Cargo.toml
tests/skeletons/wit_components/bench_js_new/: Cargo.toml
tests/skeletons/wit_components/bench_js_old/: Cargo.toml
tests/skeletons/wit_components/bench_js_opt/: Cargo.toml
(+240 files in other folders)
