[workspace]

members = [
  "crates/wasm-bridge",
  "crates/wasm-bridge-wasi",
  "crates/wasm-bridge-macros",
]

exclude = [
  "tests/"
]

resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
repository = "https://github.com/kajacx/wasm-bridge"
license = "MIT"
keywords = ["WASM", "wasmtime", "web"]
categories = ["wasm", "web-programming"]

[workspace.dependencies]
wasm-bridge = { path = "crates/wasm-bridge", version = "0.4.0" }
wasm-bridge-macros = { path = "crates/wasm-bridge-macros", version = "0.4.0" }

wasmtime = { version = "20.0", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = { version = "20.0", default-features = false }
wasmtime-component-util = { version = "20.0", default-features = false }
wasmtime-wit-bindgen = { version = "20.0", default-features = false }

js-sys = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2.89", default-features = false } # See https://users.rust-lang.org/t/very-strange-trait-bounds-error/104028
wasm-bindgen-futures = { version = "0.4", default-features = false }
wasm-bindgen-test = { version = "0.3" }
wat = { version = "1.0", default-features = false }
js-component-bindgen = { version = "1.0", default-features = false, features = ["transpile-bindgen"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
ref-cast = { version = "1.0" }
slab = { version = "0.4" }
rand_core = { version = "0.6", default-features = false }
bytes = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
heck = { version = "0.5", default-features = false }
try-lock = { version = "0.2", default-features = false }
atomic_refcell = { version = "0.1", default-features = false}
