[package]
name = "wasm-bridge-cli"
description = "Command line tool to preapre jco-transpiled components"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
zip = { version = "0.6.6", default-features = false }
