[package]
name = "wasm-bridge-jco"
description = "Standalone fork of the `js-component-bindgen` crate in jco"
version.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
keywords.workspace = true
categories.workspace = true
authors = ["Alex Crichton <alex@alexcrichton.com>", "Guy Bedford <gbedford@fastly.com>"]

[dependencies]
anyhow = { version = "1.0.71" }
heck = { version = "0.4", features = ["unicode"] }
wasmtime-environ = { version = "11.0.0", features = ["component-model"] }
wit-component = { version = "0.11.0", features = ["dummy-module"] }
wit-parser = { version = "0.8.0" }
indexmap = { version = "1.9" }
base64 = { version = "0.21.2" }

[features]
default = ["transpile-bindgen"]
transpile-bindgen = []
