[package]
name = "wasm-bridge-js"
description = "js-sys implementation of wasmtime's API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
js-sys = { version = "0.3.0" }
wasm-bindgen = { version = "0.2.89" } # See https://users.rust-lang.org/t/very-strange-trait-bounds-error/104028
wasm-bindgen-futures = { version = "0.4.0" }
wat = { version = "1.0", optional = true }
wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
js-component-bindgen = { version = "0.14", optional = true }
anyhow = { version = "1.0" }
heck = { version = "0.4.0" }
rand_core = { version = "0.6.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[features]
component-model = ["wasm-bridge-macros", "js-component-bindgen"]
async = ["wasm-bridge-macros/async"]
wasi = ["async", "rand_core"]
error-logging = []
