[package]
name = "wasm-bridge-js"
description = "js-sys implementation of wasmtime's API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wat = { workspace = true, optional = true }
wasm-bridge-macros = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
js-component-bindgen = { workspace = true, optional = true }
anyhow = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
component-model = ["wasm-bridge-macros", "js-component-bindgen", "async-trait"]
async = ["wasm-bridge-macros/async"]
error-logging = []
