[package]
name = "wasm-bridge-macros"
description = "Helper crate to define proc macros for wasm-bridge"
version.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
wasmtime-component-util = { version = "10.0.1" }
wasmtime-wit-bindgen = { version = "10.0.1" }
wit-parser = { version = "0.8.0" }
regex = "1.8"
