[package]
name = "wasm-bridge-macros"
description = "Helper crate to define proc macros for wasm-bridge"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0.25", features = ["extra-traits", "full"] }
wasmtime-component-util = { workspace = true }
wasmtime-wit-bindgen = { workspace = true }
wit-parser = { version = "0.13.0" }
regex = { version = "1.8" }

[features]
async = []
