[package]
name = "wasm-bridge-wasi-js"
description = "js-sys implementation of wasmtime's wasi API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
rand_core = { workspace = true }
wasm-bridge = { workspace = true, features = ["component-model"] }
wasm-bridge-macros = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
