[package]
name = "wasm-bridge-wasi"
description = "js-sys implementation of wasmtime's wasi API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
rand_core = { workspace = true }
bytes = { workspace = true }
wasm-bridge = { workspace = true, features = ["component-model", "async"] }
wasm-bridge-macros = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
