[package]
name = "wasm-bridge"
description = "Run WASM modules on desktop or on the web using wasmtime's API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "13.0.0", git = "https://github.com/bytecodealliance/wasmtime", default-features = false, features = ["cranelift"] }
wasmtime-wasi = { version = "13.0.0", git = "https://github.com/bytecodealliance/wasmtime", optional = true }

wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
async-trait = { version =  "0.1.73", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.2.2" }

[features]
default = ["wat", "error-logging"]
wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
async = ["wasmtime/async", "async-trait", "wasm-bridge-macros/async", "wasm-bridge-js/async"]
sync = ["wasmtime-wasi/sync"]
wasi = ["wasmtime-wasi",  "wasm-bridge-js/wasi", "async"]
error-logging = ["wasm-bridge-js/error-logging"]

