[package]
name = "wasm-bridge"
description = "Run WASM modules on desktop or on the web using wasmtime's API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "15.0.0",  features = ["cranelift"] }
wasm-bridge-macros = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bridge-js = { workspace = true }

[features]
default = ["wat", "error-logging"]
wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
async = ["wasmtime/async", "async-trait", "wasm-bridge-js/async", "wasm-bridge-macros/async"]
error-logging = ["wasm-bridge-js/error-logging"]
direct-bytes = ["wasm-bridge-js/direct-bytes"]
