[package]
name = "wasi-components-tests"
edition.workspace = true
version = "0.0.0"

[dependencies]
wasm-bridge = { path = "../../crates/wasm-bridge/",  features = ["component-model", "async", "wasi"]}
wasm-bindgen-test = "0.3"
bytes = "1.4"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tokio = { version = "1.32", features = ["full"] }
