[package]
name = "wasi-components-host-js"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "wasi"] }
rand_core = { version = "0.6.4" }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.37" }
