[package]
name = "wasi-components-host-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "wasi"] }
rand_core = { version = "0.6.4" }
tokio = { version = "1.29.1", features = ["macros", "rt"] }
