[package]
name = "wasi-components-host-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "async"] }
wasm-bridge-wasi = { path = "../../../crates/wasm-bridge-wasi" }
rand_core = { version = "0.6" }
tokio = { version = "1.0", features = ["macros", "rt"] }
