[package]
name = "wit-components-bench-js-old"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bridge = { version = "0.3.0", default-features = false, features = ["component-model"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.37" }
easybench-wasm = { version = "0.2.1", path = "../../../../easybench-wasm" }
