[package]
name = "wit-components-bench-js-opt"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "direct-bytes"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.37" }
easybench-wasm = { version = "0.2.1", path = "../../../../easybench-wasm" }
